libs/extractor/tests/snapshots/all_tests__extract_nested_selector-3.snap
---
source: libs/extractor/tests/all_tests.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import {Box} from '@devup-ui/core'\n        <Box _hover={{\n          selectors: {\n            \"&::placeholder\": {\n              color: \"red\"\n            },\n            \"&::placeholder, &:active\": {\n              color: \"blue\"\n            }\n          },\n        }} />\n        \"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "blue",
                level: 0,
                selector: Some(
                    Selector(
                        "&:hover::placeholder",
                    ),
                ),
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "blue",
                level: 0,
                selector: Some(
                    Selector(
                        "&:hover:active",
                    ),
                ),
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "red",
                level: 0,
                selector: Some(
                    Selector(
                        "&:hover::placeholder",
                    ),
                ),
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n<div className=\"a b c\" />;\n",
}
